# zachlambert-mist

./: .gitignore  CMakeLists.txt
data/models/box/: box.blend  box.mtl
data/models/golem/: golem.blend  golem.mtl
data/models/sword/: sword.mtl
data/models/tree/: tree.blend  tree.blend1  tree.mtl
data/shaders/: colored.fs  default.fs  textured.fs
docs/: ideal_api.cpp  todo.txt
examples/: CMakeLists.txt
examples/example1/: main.cpp
examples/src/: main.cpp
include/data/: material.h  mesh.h  model.h  model_manager.h  resource_config.h  resources.h  shader.h  shader_manager.h  texture.h  texture_manager.h
include/render/: renderer.h
include/renderer/: model.h  renderer.h  shader_manager.h
include/resources/: material.h  mesh.h  model.h  model_manager.h  shader.h  shader_manager.h  texture_manager.h
include/scene/: camera.h  entity.h  light.h  scene.h  world.h
include/timing/: fps_counter.h
include/window/: clock.h  fps_counter.h  window.h
resources/models/box/: box.blend1  box.mtl
resources/models/chimney/: chimney.blend  chimney.blend1  chimney.mtl
resources/models/golem/: golem.blend1
resources/models/misc/: misc.blend  misc.blend1  misc.mtl
resources/models/random/: random.blend  random.blend1  random.mtl
resources/models/sword/: sword.blend  sword.blend1
resources/shaders/: default.fs
src/: CMakeLists.txt  main.cpp
src/core/: CMakeLists.txt
src/core/include/: window.h  world.h
src/core/src/: window.cpp  world.cpp
src/data/: mesh.cpp  model.cpp  model_manager.cpp  resource_config.cpp  resources.cpp  shader.cpp  shader_manager.cpp  texture_manager.cpp
src/data_utils/: create_material.cpp  create_material.h  create_mesh.cpp  create_mesh.h  create_model.cpp  create_model.h  load_model.cpp  load_model.h
src/entity/: CMakeLists.txt
src/entity/include/: camera.h  entity.h
src/entity/src/: camera.cpp  entity.cpp
src/graphics/: CMakeLists.txt
src/graphics/include/: camera.h  data.h  light.h  load_resources.h  material.h  mesh.h  model.h  model_manager.h  renderer.h  resources.h  shader.h  shader_manager.h  texture.h  texture_manager.h
src/graphics/src/: camera.cpp  data.cpp  load_resources.cpp  mesh.cpp  model.cpp  model_manager.cpp  renderer.cpp  shader.cpp  shader_manager.cpp  texture.cpp  texture_manager.cpp
src/render/: renderer.cpp
src/renderer/: renderer.cpp  texture_manager.cpp
src/resources/: mesh.cpp  model.cpp  model_manager.cpp  shader.cpp  shader_manager.cpp  texture_manager.cpp
src/scene/: camera.cpp  entity.cpp  scene.cpp  world.cpp
src/timing/: CMakeLists.txt
src/timing/include/: clock.h
src/timing/src/: clock.cpp  fps_counter.cpp
src/window/: clock.cpp  fps_counter.cpp  window.cpp
tools/: build_debug  build_examples  build_release  run_example
